feat: added Entity framework

--- a/IdentityServerDemo/IdentityServerDemo.Oauth/appsettings.json
+++ b/IdentityServerDemo/IdentityServerDemo.Oauth/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppDb": "Data Source=amit-pc\\sqlexpress;Initial Catalog=IdentityDb;Integrated Security=True"
+    "AppDb": "Data Source=amit-pc\\sqlexpress01;Initial Catalog=IdentityDb;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
